--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
     </head>    
     <body>
+        <!--header--->
         <header class="page-header">
             <div class="container page-header-container">
                 <nav class="page-navigatoin">
@@ -28,10 +29,15 @@
                         </li>
                     </ul>
                 </nav>
-                <address class="menu menu-address">
-                    <ul class="menu menu-list menu-address">
+                <button class="mobile-menu-open-btn" type="button">
+                    <svg class="mobile-menu-open-btn-icon" width="24" height="24" aria-label="icon-menu">
+                        <use href="./images/icons.svg#icon-heroicon-menu"></use>
+                    </svg>
+                </button>
+                <address class="menu-address">
+                    <ul class="menu-address-list">
                         <li class="menu-item">
-                            <a class="menu-link link" href="mailto:info@devstudio.com">info@devstudio.com></a>
+                            <a class="menu-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                         </li>
                         <li class="menu-item">
                             <a class="menu-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -40,13 +46,18 @@
                 </address>
             </div>
         </header>
+    -->
+
         <main>
+            <!---HERO----
             <section class="hero sect-title">
                     <div class="container title-container">
                         <h1 class="solutions-title">Effective Solutions for Your Business</h1>
                         <button type="button" class="cursor-pointer">Order Service</button>
                     </div>                             
-            </section>    
+            </section>  
+              -->
+              <!---SEKT 2-----
             <section class="section section-benefits">
                 <div class="container-benefits container">                    
                     <h2 class="section-title visually-hidden">Our benefits</h2>               
@@ -97,6 +108,8 @@
                             </ul>              
                </div>
             </section>    
+            ----->
+            <!---SECTION 3---
             <section class="section our-team">
                <div class="container-team container">
                     <h2 class="section-title team-title">Our Team</h2>
@@ -111,7 +124,7 @@
                                                     <a href="" class="social-list-link">
                                                         <svg class="social-list-icon"
                                                             width="16" height="16" aria-label="icon-instagram">
-                                                            <use href="./images/icons/icons.svg#icon-instagram"></use>
+                                                            <use href="./images/icons.svg#icon-instagram"></use>
                                                         </svg>
                                                      </a>
                                                 </li>
@@ -256,6 +269,9 @@
                         </ul>                    
                  </div>
             </section>
+---->
+
+<!--SECTOIN 4--
             <section class="section our-portfolio">
                 <div class="container portfolio-container">
                     <h2 class="section-title portfolio-title">Our Portfolio</h2>
@@ -339,7 +355,10 @@
                     </ul>
                 </div>
             </section>
+            --->
         </main>
+
+        <!---FOOTER --
         <footer class="footer-section">
             <div class="container container-footer">
                 <div class="container-footer-logo-text">
@@ -388,7 +407,7 @@
                             <input class="email-form-input" type="email" name="user-email" placeholder="E-mail" />
                         </label> 
                         <button type="submit" class="form-btn">Subscribe
-                            <svg class="teleframm-btn-icon" width="24" height="24" aria-label="icon-telegramm-ic">
+                            <svg class="telegramm-btn-icon" width="24" height="24" aria-label="icon-telegramm-ic">
                                 <use href="./images/icons.svg#icon-telegramm-ic"></use>
                             </svg>
                         </button>
@@ -396,6 +415,9 @@
                 </div>                    
             </div>              
         </footer>   
+        --->
+
+        <!----MODAL----------------------------------------------
         <div class="backdrop is-open">
             <div class="modal">
                     <button class="modal-close-btn" type="button">
@@ -468,6 +490,77 @@
                     </form> 
             </div>
         </div> 
+    ------------------------->
+
+        <!---modal-mobil-menu-------------------->
+        <div class="backdrop-mobile-wrapper is-open">
+            <div class="container modal-mobil-container">
+                <button class="mobile-menu-close-btn" type="button">
+                    <svg class="mobile-menu-close-btn-icon" width="8" height="8" aria-label="icon-close2">
+                        <use href="./images/icons.svg#icon-close2"></use>
+                    </svg>
+                </button>
+                <nav class="mobile-menu-navigation">
+                    <ul class="mobile-menu list">
+                        <li class="mobile-menu-item">
+                            <a class="mob-menu-link link" href="./index.html">Studio</a>
+                        </li>
+                        <li class="mobile-menu-item">
+                            <a class="mob-menu-link link" href="">Portfolio</a>
+                        </li>
+                        <li class="mobile-menu-item">
+                            <a class="mob-menu-link link" href="">Contacts</a>
+                        </li>
+                    </ul>
+                </nav>
+                <address class="menu-mobile-address">
+                    <ul class="menu-list-mobile-address">
+                        <li class="menu-mob-item">
+                            <a class="menu-mob-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        </li>
+                        <li class="menu-mob-item">
+                            <a class="menu-mob-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        </li>
+                    </ul>
+                </address>
+                </div>
+                <div class="mob-social-list-wrapper">
+                    <ul class="mob-social-list list">
+                        <li class="mob-social-list-item">
+                            <a href="" class="mob-social-list-link link">
+                                <svg class="mob-social-list-icon" width="24" height="24" aria-label="icon-instagram">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="mob-social-list-item">
+                            <a href="" class="mob-social-list-link link">
+                                <svg class="mob-social-list-icon" width="24" height="24" aria-label="icon-twitter">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="mob-social-list-item">
+                            <a href="" class="mob-social-list-link link">
+                                <svg class="mob-social-list-icon" width="24" height="24" aria-label="icon-facebook">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="mob-social-list-item">
+                            <a href="" class="mob-social-list-link link">
+                                <svg class="mob-social-list-icon" width="24" height="24" aria-label="icon-linkedin">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+            
+        </div>
+
     </body>
     
 </html>
