--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         </footer>   
     
 
-        <!----MODAL---------------------------------
+        <!----MODAL--------------------------------->
         <div class="backdrop is-open">
             <div class="modal">
                     <button class="modal-close-btn" type="button">
@@ -546,7 +546,7 @@
                     </form> 
             </div>
         </div> 
-   ----->
+   
            <!--mobil-menu------------->
         <div class="mobile-menu-wrapper">
             <div class="container mobile-menu-container">
