--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
         </footer>   
     
 
-        <!----MODAL--------------------------------->
+        <!----MODAL---------------------------------
         <div class="backdrop is-open">
             <div class="modal">
                     <button class="modal-close-btn" type="button">
@@ -545,7 +545,7 @@
                         <button class="review-form-submit-btn" type="submit">Send</button>
                     </form> 
             </div>
-        </div> 
+        </div> --->
    
            <!--mobil-menu------------->
         <div class="mobile-menu-wrapper">
