--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
         </div> --->
    
            <!--mobil-menu------------->
-        <div class="mobile-menu-wrapper">
+        <div class="mobile-menu-wrapper is-open">
             <div class="container mobile-menu-container">
                 <button class="mobile-menu-close-btn" type="button">
                     <svg class="mobile-menu-close-btn-icon" width="8" height="8" aria-label="icon-close2">
@@ -561,7 +561,7 @@
                             <a class="mobile-menu-link link" href="./index.html">Studio</a>
                         </li>
                         <li class="mobile-menu-item">
-                            <a class="mobile-menu-link link color studio" href="">Portfolio</a>
+                            <a class="mobile-menu-link link" href="">Portfolio</a>
                         </li>
                         <li class="mobile-menu-item">
                             <a class="mobile-menu-link link" href="">Contacts</a>
@@ -570,7 +570,7 @@
                 </nav>
                     <ul class="mobile-address-list list">
                         <li class="mobile-address-list-item">
-                            <a class="menu-mob-link link color-mob" href="">+11 (000) 111-11-11</a>
+                            <a class="menu-mob-link link" href="">+11 (000) 111-11-11</a>
                         </li>
                         <li class="mmobile-address-list-item">
                             <a class="menu-mob-link link" href="">info@devstudio.com</a>
