--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                         <button class="review-form-submit-btn" type="submit">Send</button>
                     </form> 
             </div>
-        </div> --->
+        </div> 
    
            <!--mobil-menu------------->
         <div class="mobile-menu-wrapper is-open">
@@ -558,7 +558,7 @@
                 <nav class="mobile-menu-navigation">
                     <ul class="mobile-menu list">
                         <li class="mobile-menu-item">
-                            <a class="mobile-menu-link link" href="./index.html">Studio</a>
+                            <a class="mobile-menu-link link color-studio" href="./index.html">Studio</a>
                         </li>
                         <li class="mobile-menu-item">
                             <a class="mobile-menu-link link" href="">Portfolio</a>
@@ -570,7 +570,7 @@
                 </nav>
                     <ul class="mobile-address-list list">
                         <li class="mobile-address-list-item">
-                            <a class="menu-mob-link link" href="">+11 (000) 111-11-11</a>
+                            <a class="menu-mob-link link color-tel"  href="">+11 (000) 111-11-11</a>
                         </li>
                         <li class="mmobile-address-list-item">
                             <a class="menu-mob-link link" href="">info@devstudio.com</a>
