--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <h2 class="section-title team-title">Our Team</h2>
                         <ul class="team-list list">
                             <li class="team-list-item menu-item">
-                                <img class="img-team" srcset="./images/mob/mark_gurrero1.jpg,  ./images/mob/mark_gurrero@2x.jpg 2x"
+                                <img class="img-team" srcset="./images/mob/mark_gurrero1.jpg 1x,  ./images/mob/mark_gurrero@2x.jpg 2x"
                                  src="./images/mark_guerrero.jpg" 
                                  alt="Product Designer" width="264" height="260" type="image/jpg"/>
                                     <div class="container-team-title-text">
