--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
         </div> 
    
            <!--mobil-menu------------->
-        <div class="mobile-menu-wrapper is-open">
+        <div class="mobile-menu-wrapper">
             <div class="container mobile-menu-container">
                 <button class="mobile-menu-close-btn" type="button">
                     <svg class="mobile-menu-close-btn-icon" width="8" height="8" aria-label="icon-close2">
